# curfp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
curfp/: __init__.py  _ext.cpp
examples/: benchmark.py  benchmark64.py  benchmark_mini32.py  benchmark_mini64.py  benchmark_variants.py  example.py
include/: curfp.h
python_tests/: test_dlansf.py  test_dpfcon.py  test_dpftrf.py  test_dpftri.py  test_dpftrs.py  test_dsfmm.py  test_dsfmv.py  test_dsfr.py  test_dsfr2.py  test_dsfr2k.py  test_dssfrk.py  test_dstrttf_dstfttr.py  test_slansf.py  test_spfcon.py  test_spftrf.py  test_spftri.py  test_spftrs.py  test_ssfmm.py  test_ssfmv.py  test_ssfr.py  test_ssfr2.py  test_ssfr2k.py  test_ssfrk.py  test_stfttr_strttf.py  test_vs_lapack.py
src/: curfp_dlansf.cu  curfp_dpfcon.cu  curfp_dpftrf.cpp  curfp_dpftri.cu  curfp_dpftrs.cpp  curfp_dsfmm.cpp  curfp_dsfmv.cpp  curfp_dsfr.cpp  curfp_dsfr2.cpp  curfp_dsfr2k.cpp  curfp_dssfrk.cpp  curfp_dstfttr.cu  curfp_dstrttf.cu  curfp_internal.h  curfp_slansf.cu  curfp_spfcon.cu  curfp_spftrf.cpp  curfp_spftri.cu  curfp_ssfmm.cpp  curfp_ssfmv.cpp  curfp_ssfr.cpp  curfp_ssfr2.cpp  curfp_ssfr2k.cpp  curfp_ssfrk.cpp  curfp_stfttr.cu  curfp_strttf.cu
tests/: CMakeLists.txt  test_spftrf.cu  test_ssfrk.cu
