[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curfp"
version = "0.1.0"
description = "CUDA RFP format matrix operations (ssfrk, spftrf) for PyTorch"
requires-python = ">=3.8"
dependencies = ["torch"]

[tool.setuptools.packages.find]
include = ["curfp*"]

[tool.setuptools.package-data]
curfp = ["*.so"]

[tool.pytest.ini_options]
testpaths = ["python_tests"]
