[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "curfp"
version = "0.1.0"
description = "CUDA RFP format matrix operations (ssfrk, spftrf) for PyTorch"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "pytest",
    "scipy>=1.10.1",
]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DCURFP_BUILD_PYTHON=ON"]

[tool.setuptools.package-data]
curfp = ["*.so"]

[tool.pytest.ini_options]
testpaths = ["python_tests"]
